<resources>
    <string name="app_name">contact</string>
    <string name="plan_fragment">일정 목록</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="chat">채팅</string>
    <string name="chat_add">채팅 추가</string>
    <string name="recent_search">최근 검색어</string>
    <string name="chatting_room">채팅방</string>
    <string name="progress_add_friend">요청취소</string>
    <string name="add">추가</string>
    <string name="accept_button_click">수락하셨습니다.</string>
    <string name="refuse_button_click">거절하셨습니다.</string>
    <string name="add_friend">친구 추가</string>
    <string name="no_search_data">검색 결과가 없습니다.</string>
    <string name="with_friend">친구 초대</string>
    <string name="check_friend">선택한 친구</string>
    <string name="friend_list">친구 목록</string>
    <string name="friend">친구</string>
    <string name="title">제목</string>
    <string name="add_plan">일정 추가</string>
    <string name="time">시간</string>
    <string name="date">날짜</string>
    <string name="undefined">미정</string>
    <string name="register">등록</string>
    <string name="location">장소</string>
    <string name="address">주소</string>
    <string name="photo">사진</string>
    <string name="add_dutch">금액 추가</string>
    <string name="manage_dutch">금액 관리</string>
    <string name="member">멤버</string>
    <string name="auto_pay">자동(N분의 1)</string>
    <string name="not_auto_pay">수동(직접 입력)</string>
    <string name="money_hint">10000</string>
    <string name="memo_hint">memo</string>
    <string name="memo">Memo</string>
    <string name="receipt">영수증</string>
    <string name="colons">:</string>
    <string name="KWR">원</string>
    <string name="total_money">총 금액</string>
    <string name="init_money">0</string>
    <string name="personal_pay">개인 지출 금액</string>
    <string name="manage_friend">친구 관리</string>
    <string name="request_friend">친구 요청</string>
    <string name="update">수정</string>
    <string name="non_title">제목 없음</string>
    <string name="need_date">날짜를 정해주세요.</string>
    <string name="logout">로그아웃</string>
    <string name="remove_friend">친구 삭제</string>
    <string name="member_list">참가자 : </string>
    <string name="accept">수락</string>
    <string name="refuse">거절</string>
    <string name="paste">붙여넣기</string>
    <string name="gallery">갤러리</string>
    <string name="save">저장</string>
    <string name="request_friend_sentence">님의 친구 요청</string>
    <string name="plan_setting">일정 설정</string>
    <string name="update_title">제목 수정</string>
    <string name="invite_member">멤버 초대</string>
    <string name="manage_plan">일정 관리</string>
    <string name="checkout">퇴장</string>

</resources>