<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.contact.ui.plan.detail.info.dutchpay.DutchAddViewModel" />
        <import type="android.view.View"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.plan.detail.info.dutchpay.DutchAdd">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/add_dutch"/>


        <EditText
            android:id="@+id/memo"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:background="@drawable/edittext_rectangle"
            android:hint="@string/memo_hint"
            android:padding="10dp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_pay"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/not_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_auto_pay"/>
        </RadioGroup>
        <EditText
            android:id="@+id/auto_dutch"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:inputType="number"
            android:background="@drawable/edittext_rectangle"
            android:hint="@string/money_hint"
            android:padding="10dp"
            android:visibility="@{viewModel.autoStatus ? View.VISIBLE : View.GONE}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/manual_dutch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.autoStatus ? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/member"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/member_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


    </LinearLayout>
</layout>
