<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clip"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@drawable/light_purple_button_rectangle"
            android:text="@string/paste"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gallery"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/light_purple_button_rectangle"
            android:text="@string/gallery"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@drawable/light_purple_button_rectangle"
            android:text="@string/save"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>